Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22051

Protocol::end_statement(): Assertion `0' failed on Galera node upon DDL attempt with conflicting lock

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.4(EOL), 10.5(EOL)
    • 10.4.13, 10.5.4
    • Galera, Server, wsrep
    • None
    • Galera 26.4.4(r4599)

    Description

      Note: For MTR, place the test under suite/galera/t, then it can be run without extra MTR options.

      --source include/galera_cluster.inc
      --source include/have_innodb.inc
       
      FLUSH TABLES WITH READ LOCK;
      --error ER_CANT_UPDATE_WITH_READLOCK
      CREATE TABLE t1 (a INT) ENGINE=InnoDB;
      

      10.4 1c8de231

      2020-03-26 18:44:11 16 [Note] WSREP: Desyncing and pausing the provider
      2020-03-26 18:44:11 0 [Note] WSREP: Member 1.0 (asus) desyncs itself from group
      2020-03-26 18:44:11 0 [Note] WSREP: Shifting SYNCED -> DONOR/DESYNCED (TO: 2)
      2020-03-26 18:44:11 16 [Note] WSREP: pause
      2020-03-26 18:44:11 16 [Note] WSREP: Provider paused at ffd97aff-6f80-11ea-89b6-cb5937e877d4:2 (9)
      2020-03-26 18:44:11 16 [Note] WSREP: Provider paused at: 2
      2020-03-26 18:44:11 16 [Note] WSREP: Server paused at: 2
      mysqld: /data/src/10.4/sql/protocol.cc:617: void Protocol::end_statement(): Assertion `0' failed.
      200326 18:44:11 [ERROR] mysqld got signal 6 ;
       
      #6  0x00007f2f14edbe67 in __assert_fail_base (fmt=<optimized out>, assertion=assertion@entry=0x561cade07ed8 "0", file=file@entry=0x561cade07bf0 "/data/src/10.4/sql/protocol.cc", line=line@entry=617, function=function@entry=0x561cade08550 <Protocol::end_statement()::__PRETTY_FUNCTION__> "void Protocol::end_statement()") at assert.c:92
      #7  0x00007f2f14edbf12 in __GI___assert_fail (assertion=0x561cade07ed8 "0", file=0x561cade07bf0 "/data/src/10.4/sql/protocol.cc", line=617, function=0x561cade08550 <Protocol::end_statement()::__PRETTY_FUNCTION__> "void Protocol::end_statement()") at assert.c:101
      #8  0x0000561cad00b0c1 in Protocol::end_statement (this=0x7f2e980010b8) at /data/src/10.4/sql/protocol.cc:617
      #9  0x0000561cad131efa in dispatch_command (command=COM_QUERY, thd=0x7f2e98000af0, packet=0x7f2e980083a1 "CREATE TABLE t1 (a INT) ENGINE=InnoDB", packet_length=37, is_com_multi=false, is_next_command=false) at /data/src/10.4/sql/sql_parse.cc:2433
      #10 0x0000561cad12e44d in do_command (thd=0x7f2e98000af0) at /data/src/10.4/sql/sql_parse.cc:1360
      #11 0x0000561cad2b79db in do_handle_one_connection (connect=0x561cb15574f0) at /data/src/10.4/sql/sql_connect.cc:1412
      #12 0x0000561cad2b772a in handle_one_connection (arg=0x561cb15574f0) at /data/src/10.4/sql/sql_connect.cc:1316
      #13 0x0000561cadcc00c9 in pfs_spawn_thread (arg=0x561cb106c570) at /data/src/10.4/storage/perfschema/pfs.cc:1869
      #14 0x00007f2f16e644a4 in start_thread (arg=0x7f2ef5f90700) at pthread_create.c:456
      #15 0x00007f2f14f98d0f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:97
      

      Reproducible with 10.4, 10.5 when wsrep is enabled.
      Not reproducible with 10.3.
      Not reproducible without wsrep enabled.
      No obvious immediate problem on a non-debug build.

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.