MDEV-22051: Protocol::end_statement(): Assertion `0' failed on Galera node upon DDL attempt with conflicting lock

If FTWRL is issued, DDL statements should report error back to user before
TOI is started.